wandb/run-20250304_173851-sk50bzfj/files/output.log
2.6.0+cu126
12.6
True
NVIDIA GeForce GTX 1650 Ti
Traceback (most recent call last):
  File "C:\Users\Unliv\PycharmProjects\SignLanguageDetection-CW\main.py", line 27, in <module>
    main()
  File "C:\Users\Unliv\PycharmProjects\SignLanguageDetection-CW\main.py", line 24, in main
    train(logger)
  File "C:\Users\Unliv\PycharmProjects\SignLanguageDetection-CW\main.py", line 19, in train
    results = model.train(data=data_path, epochs=3, device="cpu", wandb=True)
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Unliv\anaconda3\Lib\site-packages\ultralytics\engine\model.py", line 804, in train
    self.trainer = (trainer or self._smart_load("trainer"))(overrides=args, _callbacks=self.callbacks)
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Unliv\anaconda3\Lib\site-packages\ultralytics\engine\trainer.py", line 102, in __init__
    self.args = get_cfg(cfg, overrides)
                ^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Unliv\anaconda3\Lib\site-packages\ultralytics\cfg\__init__.py", line 306, in get_cfg
    check_dict_alignment(cfg, overrides)
  File "C:\Users\Unliv\anaconda3\Lib\site-packages\ultralytics\cfg\__init__.py", line 493, in check_dict_alignment
    raise SyntaxError(string + CLI_HELP_MSG) from e
SyntaxError: '[31m[1mwandb[0m' is not a valid YOLO argument.

    Arguments received: ['yolo']. Ultralytics 'yolo' commands use the following syntax:

        yolo TASK MODE ARGS

        Where   TASK (optional) is one of frozenset({'segment', 'classify', 'detect', 'obb', 'pose'})
                MODE (required) is one of frozenset({'val', 'train', 'export', 'predict', 'track', 'benchmark'})
                ARGS (optional) are any number of custom 'arg=value' pairs like 'imgsz=320' that override defaults.
                    See all ARGS at https://docs.ultralytics.com/usage/cfg or with 'yolo cfg'

    1. Train a detection model for 10 epochs with an initial learning_rate of 0.01
        yolo train data=coco8.yaml model=yolo11n.pt epochs=10 lr0=0.01

    2. Predict a YouTube video using a pretrained segmentation model at image size 320:
        yolo predict model=yolo11n-seg.pt source='https://youtu.be/LNwODJXcvt4' imgsz=320

    3. Val a pretrained detection model at batch-size 1 and image size 640:
        yolo val model=yolo11n.pt data=coco8.yaml batch=1 imgsz=640

    4. Export a YOLO11n classification model to ONNX format at image size 224 by 128 (no TASK required)
        yolo export model=yolo11n-cls.pt format=onnx imgsz=224,128

    5. Ultralytics solutions usage
        yolo solutions count or in ['heatmap', 'queue', 'speed', 'workout', 'analytics', 'trackzone', 'inference'] source="path/to/video/file.mp4"

    6. Run special commands:
        yolo help
        yolo checks
        yolo version
        yolo settings
        yolo copy-cfg
        yolo cfg
        yolo solutions help

    Docs: https://docs.ultralytics.com
    Solutions: https://docs.ultralytics.com/solutions/
    Community: https://community.ultralytics.com
    GitHub: https://github.com/ultralytics/ultralytics

